Added Session Redis to split session info from user info

--- a/spiderdata/session.conf
+++ b/spiderdata/session.conf
@@ -19,11 +19,11 @@ daemonize no
 
 # When running daemonized, Redis writes a pid file in /var/run/redis.pid by
 # default. You can specify a custom pid file location here.
-pidfile /var/run/engine.pid
+pidfile /var/run/session.pid
 
 # Accept connections on the specified port, default is 6379.
 # If port 0 is specified Redis will not listen on a TCP socket.
-port 6380
+port 6377
 
 # If you want you can bind a single interface, if the bind option is not
 # specified all the interfaces will listen for incoming connections.
@@ -68,7 +68,7 @@ loglevel notice
 # Redis to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
 # SWITCH ON DEPLOY - switch log file location and make file
-# ./var/log/spider/engine.log
+# ./var/log/spider/session.log
 logfile stdout
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
@@ -143,7 +143,7 @@ rdbcompression yes
 rdbchecksum yes
 
 # The filename where to dump the DB
-dbfilename engine.rdb
+dbfilename session.rdb
 
 # The working directory.
 #
