--- a/spiderdata/central.conf
+++ b/spiderdata/central.conf
@@ -14,11 +14,12 @@
 
 # By default Redis does not run as a daemon. Use 'yes' if you need it.
 # Note that Redis will write a pid file in /var/run/redis.pid when daemonized.
+# SWITCH ON DEPLOY - turn on
 daemonize no
 
 # When running daemonized, Redis writes a pid file in /var/run/redis.pid by
 # default. You can specify a custom pid file location here.
-pidfile /var/run/redis.pid
+pidfile /var/run/central.pid
 
 # Accept connections on the specified port, default is 6379.
 # If port 0 is specified Redis will not listen on a TCP socket.
@@ -66,6 +67,8 @@ loglevel notice
 # Specify the log file name. Also 'stdout' can be used to force
 # Redis to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
+# SWITCH ON DEPLOY - switch log file location and make file
+# ./var/log/spider/central.log
 logfile stdout
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
@@ -140,7 +143,7 @@ rdbcompression yes
 rdbchecksum yes
 
 # The filename where to dump the DB
-dbfilename dump.rdb
+dbfilename central.rdb
 
 # The working directory.
 #
@@ -150,7 +153,8 @@ dbfilename dump.rdb
 # The Append Only File will also be created inside this directory.
 # 
 # Note that you must specify a directory here, not a file name.
-dir ./
+# SWITCH ON DEPLOY - make directory
+dir ./var/lib/spider/
 
 ################################# REPLICATION #################################
 
@@ -361,7 +365,7 @@ slave-priority 100
 # with the better durability guarantees.
 #
 # Please check http://redis.io/topics/persistence for more information.
-
+# SWITCH ON DEPLOY - turn on?
 appendonly no
 
 # The name of the append only file (default: "appendonly.aof")
