--- a/spiderdata/central.conf
+++ b/spiderdata/central.conf
@@ -107,10 +107,10 @@ databases 16
 #   like in the following example:
 #
 #   save ""
-
-save 900 1
-save 300 10
-save 60 10000
+# SWITCH ON DEPLOY ???
+#save 900 1
+#save 300 10
+#save 60 10000
 
 # By default Redis will stop accepting writes if RDB snapshots are enabled
 # (at least one save point) and the latest background save failed.
