--- a/spiderdata/engine.conf
+++ b/spiderdata/engine.conf
@@ -108,9 +108,10 @@ databases 16
 #
 #   save ""
 
-save 900 1
-save 300 10
-save 60 10000
+# No Saves - If lose engine data, new crawls will need to be initiated
+#save 900 1
+#save 300 10
+#save 60 10000
 
 # By default Redis will stop accepting writes if RDB snapshots are enabled
 # (at least one save point) and the latest background save failed.
