--- a/spiderdata/engine_deploy.conf
+++ b/spiderdata/engine_deploy.conf
@@ -68,8 +68,8 @@ loglevel notice
 # Redis to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
 # SWITCH ON DEPLOY - switch log file location and make file
-/var/log/spider/engine.log
 #logfile stdout
+logfile /var/log/spider/engine.log
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
 # and optionally update the other syslog parameters to suit your needs.
